Fix scroll to top when on small window

--- a/Src/Client/GradeMaster.DesktopClient/wwwroot/css/app.css
+++ b/Src/Client/GradeMaster.DesktopClient/wwwroot/css/app.css
@@ -169,7 +169,7 @@ h1:focus {
         overflow-x: visible;
     }
     .content {
-        scroll-margin-top: 120px;
+        scroll-margin-top: 385px;
     }
 }
 
